--- a/cs129exer1/build.xml
+++ b/cs129exer1/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="calcu129hamandbacon" default="default" basedir=".">
-    <description>Builds, tests, and runs the project calcu129hamandbacon.</description>
+<project name="cs129exer1" default="default" basedir=".">
+    <description>Builds, tests, and runs the project cs129exer1.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="calcu129hamandbacon-impl.jar">
+        <target name="run" depends="cs129exer1-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
